<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">1695626630575322</string>
    <string name="fb_login_protocol_scheme">fb1695626630575322</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="app_name">KetekMall</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome</string>
    <string name="please_log_in_to_continue">Please Log In To Continue</string>
    <string name="Registration">Registration</string>
    <string name="create_an_account">Create an Account</string>
    <string name="don_t_have_an_account">Don\'t have An Account?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="logout">Log out</string>
    <string name="contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about_the_app">About the App</string>
    <string name="my_saved_searches">My Saved Searches</string>
    <string name="my_favourite_ads">My Favourite Ads</string>
    <string name="my_chat_inbox">My Chat Inbox</string>
    <string name="my_order">My Order</string>
    <string name="find_items">My Product</string>
    <string name="sell_my_item">Add New Product</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="ad_details">Product Name</string>
    <string name="price_rm">Price (RM)</string>
    <string name="uploaded_photo">Uploaded Photo</string>
    <string name="good_tips">Good Tips</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="reset_here">Reset Here</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter">Enter</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="birthday">Birthday</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="please_enter_an_ad_detail">Please enter a product name</string>
    <string name="item_image">Item Image</string>
    <string name="or">Quick Login with</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>
    <string name="sub">Sub</string>
    <string-array name="main_category" tools:ignore="InconsistentArrays">
        <item>Process food</item>
        <item>Handicraft</item>
        <item>Health and Beauty</item>
        <item>Home and Living</item>
        <item>Fashion Accessories</item>
        <item>Sarawak Product</item>
    </string-array>
    <string name="sub_category">Sub Category</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="available">AVAILABLE</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>
    <string name="select_category">Select Category</string>
    <string name="enter_ad_details">Enter Ad Details</string>
    <string name="add_product">Add New Product</string>
    <string name="select_a_category">Select a Category</string>
    <string name="to_click">to KetekMall</string>
    <string name="unit_price">Unit Price</string>
    <string name="subtotal">Subtotal</string>
    <string name="rm">RM</string>
    <string name="cars">Cars</string>
    <string name="properties_for_sale">Properties for Sale</string>
    <string name="jobs">Jobs</string>
    <string name="pets">Pets</string>
    <string name="men_collection">Men Collection</string>
    <string name="mom_and_kids">Mom and Kids</string>
    <string name="women_collection">Women Collection</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="services">Services</string>
    <string name="travel_and_holiday">Travel and Holiday</string>
    <string name="electronics">Electronics</string>
    <string name="properties_for_rent">Properties for Rent</string>
    <string name="furniture">Furniture</string>
    <string name="sport_and_hobbies">Sport and Hobbies</string>
    <string name="motorcycles">Motorcycles</string>
    <string name="car_accessories_and_parts">Car Accessories and Parts</string>
    <string name="camera_and_photography">Camera and Photography</string>
    <string name="computer_and_accessories">Computer and Accessories</string>
    <string name="business_for_sale">Business for Sale</string>
    <string name="handcraft">Handcraft</string>
    <string name="see_all">View</string>
    <string name="greeting">Welcome!</string>
    <string name="buy_sell_find_almost_everything">Buy. Sell. Find. Almost Everything!</string>
    <string name="items_available_now"> items Available now</string>
    <string name="items">Items</string>
    <string name="sell">Sell</string>
    <string name="find">Find</string>
    <string name="snap_it_post_it_make_rm">Snap it. Post it. Make RM</string>
    <string name="chat_check_cod">Chat. Check. COD</string>
    <string name="food">Food</string>
    <string name="remove">Remove</string>
    <string name="grocery">Grocery</string>
    <string name="choose_a_location">Choose a Location</string>
    <string name="district">District</string>
    <string name="select_location">Choose a Location</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="failed_to_add">Failed to Cart</string>
    <string name="cannot_add_your_own_item">Sorry, Cannot Add Your Own Item</string>
    <string name="added_to_like">Added to My Likes</string>
    <string name="failed">Failed</string>
    <string name="press_back_again_to_exit">"Press back again to exit"</string>
    <string name="success_add">Added Successfully</string>
    <string name="success_update">Updated Successfully</string>
    <string name="success_saved">Saved Successfully</string>
    <string name="please_re_enter_the_item_again">Please re-enter the item details again</string>
    <string name="incomplete_information">Please Complete Your Information Before Placing Order</string>
    <string name="order_canceled">Your order has been canceled</string>
    <string name="pending">Pending</string>
    <string-array name="itemType">
        <item>Document</item>
        <item>Merchandise</item>
        <item>Parcel</item>
    </string-array>
    <string-array name="paymentType">
        <item>Cash on Delivery</item>
        <item>Credit Card on Delivery</item>
        <item>Paid</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="vehicle_category">
        <item>Car</item>
        <item>Motorcycles</item>
        <item>Car Accessories and Parts</item>
    </string-array>
    <string-array name="properties_category">
        <item>Properties for Sale</item>
        <item>Properties for Rent</item>
        <item>Properties for Auction</item>
        <item>New Properties</item>
    </string-array>
    <string-array name="electronic_category">
        <item>Mobile Phones and Gadgets</item>
        <item>Accessories for Phones and Gadgets</item>
        <item>Camera and Photography</item>
        <item>Computer and Accessories</item>
    </string-array>
    <string-array name="home_category">
        <item>Women Collection</item>
        <item>Men Collection</item>
        <item>Home Appliances and Kitchen</item>
        <item>Mom and Kids</item>
        <item>Furniture and Decoration</item>
    </string-array>
    <string-array name="leisure_category">
        <item>Music Instruments</item>
        <item>Pets</item>
        <item>Sports and Outdoor</item>
        <item>Hobby and Collectibles</item>
    </string-array>
    <string-array name="business_category">
        <item>Professional/Business Equipment</item>
        <item>Business for Sale</item>
    </string-array>
    <string-array name="jobs_category">
        <item>Services</item>
    </string-array>
    <string-array name="travel_category">
        <item>Tours and Holidays</item>
        <item>Accommodation and Homestays</item>
    </string-array>
    <string-array name="other_category">
        <item>Others</item>
        <item>Food</item>
        <item>Grocery</item>
    </string-array>
    <string name="location">Location</string>
    <string-array name="item_location2">
        <item>All Region</item>
        <item>Kota Samarahan</item>
        <item>Kuching</item>
        <item>Sibu</item>
    </string-array>
    <string name="division">Division</string>
    <string-array name="new_division">
        <item>Kuching</item>
        <item>Kota Samarahan</item>
        <item>Serian</item>
        <item>Sri Aman</item>
        <item>Betong</item>
        <item>Sarikei</item>
        <item>Sibu</item>
        <item>Mukah</item>
        <item>Bintulu</item>
        <item>Kapit</item>
        <item>Miri</item>
        <item>Limbang</item>
    </string-array>
    <string-array name="new_kuching">
        <item>Kuching</item>
        <item>Bau</item>
        <item>Lundu</item>
    </string-array>
    <string-array name="new_samarahan">
        <item>Kota Samarahan</item>
        <item>Asajaya</item>
        <item>Simunjan</item>
    </string-array>
    <string-array name="new_serian">
        <item>Serian</item>
        <item>Tebedu</item>
    </string-array>
    <string-array name="new_sri_aman">
        <item>Sri Aman</item>
        <item>Lubok Antu</item>
    </string-array>
    <string-array name="new_betong">
        <item>Betong</item>
        <item>Saratok</item>
        <item>Pusa</item>
        <item>Kabong</item>
    </string-array>
    <string-array name="new_sarikei">
        <item>Sarikei</item>
        <item>Meradong</item>
        <item>Julau</item>
        <item>Pakan</item>
    </string-array>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="ad_detail">Product Name</string>
    <string name="x1">x1</string>
    <string name="placed_on_yyyy_mm_dd">Placed on YYYY-MM-DD</string>
    <string name="status">Status</string>
    <string name="shipped_out_to_sarawak">Shipped out to Sarawak</string>
    <string name="cancel">Cancel</string>
    <string name="delivered_in">Delivered in</string>
    <string name="_0_days">0 Days</string>
    <string name="view">View</string>
    <string name="item_name">Item Name</string>
    <string name="myr0_00">RM0.00</string>
</resources>