<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_foreground"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart_foreground"
        android:title="@string/add_to_cart"
        app:actionLayout="@layout/cart_badge"
        app:showAsAction="always" />

    <group
        android:id="@+id/settings"
        android:checkableBehavior="none">

        <item
            android:id="@+id/user_profile"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/setting"
            android:title="@string/settings" />

    </group>
</menu>