<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_marginBottom="7dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:padding="5dp"
        android:text="Order ID"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/text_order_id"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_ad_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_order_id"
        android:layout_toEndOf="@id/photo"
        android:fontFamily="@font/open_sans_semibold"
        android:padding="10dp"
        android:text="@string/ad_detail"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_quantity"
        android:layout_toEndOf="@id/photo"
        android:fontFamily="@font/open_sans"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/myr0_00"
        android:textColor="@color/colorGrey"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/open_sans"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/x1"
        android:textColor="@color/colorGrey"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_placed_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/placed_on_yyyy_mm_dd"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/status"
            android:textAlignment="textEnd"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:id="@+id/text_ship_placed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:textColor="@color/colorGrey"
        android:textSize="12sp"
        android:text="@string/shipped_out_to_sarawak" />

    <LinearLayout
        android:layout_below="@id/text_ship_placed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_review"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@mipmap/login_part_border_orange"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="18sp"
            android:text="@string/view" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@mipmap/login_part_border_orange"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/cancel" />

    </LinearLayout>


</RelativeLayout>