<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/colorWhite"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:layout_centerVertical="true"
        android:text="@string/division"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/open_sans"
        android:text="@string/myr0_00"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_below="@id/text_price"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:text="@string/delivered_in"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/_0_days"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>