<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_item"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans"
        android:text="@string/item_name"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans"
        android:text="@string/myr0_00"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/montserrat"
        android:text="@string/view"
        android:textSize="12sp" />
</LinearLayout>